feat: Save json web token inside store (temporary)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vue-jwt-auth-boilerplate",
-  "version": "0.1.0",
+  "version": "0.2.0",
+  "author": "Guillaume Duhan",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
